--- a/News Api Project/Storyboards/Base.lproj/Main.storyboard
+++ b/News Api Project/Storyboards/Base.lproj/Main.storyboard
@@ -3,7 +3,6 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
-        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -96,7 +95,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="OFW-iY-gUH">
-                                <rect key="frame" x="20" y="190" width="374" height="672"/>
+                                <rect key="frame" x="20" y="98" width="374" height="764"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ofl-Jw-tc5">
                                         <rect key="frame" x="0.0" y="0.0" width="374" height="210.5"/>
@@ -110,8 +109,8 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" verticalHuggingPriority="247" verticalCompressionResistancePriority="747" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="F4l-IR-gS1">
-                                        <rect key="frame" x="0.0" y="251" width="374" height="421"/>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" verticalHuggingPriority="247" verticalCompressionResistancePriority="747" editable="NO" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="F4l-IR-gS1">
+                                        <rect key="frame" x="0.0" y="251" width="374" height="513"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                         <color key="textColor" systemColor="labelColor"/>
@@ -125,10 +124,10 @@
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="View More" buttonSize="medium">
                                     <backgroundConfiguration key="background" cornerRadius="18">
-                                        <color key="backgroundColor" systemColor="secondaryLabelColor"/>
-                                        <color key="strokeColor" name="AccentColor"/>
+                                        <color key="backgroundColor" systemColor="systemGray6Color"/>
+                                        <color key="strokeColor" systemColor="labelColor"/>
                                     </backgroundConfiguration>
-                                    <color key="baseForegroundColor" name="AccentColor"/>
+                                    <color key="baseForegroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </buttonConfiguration>
                                 <connections>
                                     <action selector="buttonView:" destination="FT7-0j-cZ6" eventType="touchUpInside" id="Xep-R0-fvg"/>
@@ -143,10 +142,10 @@
                             <constraint firstItem="OFW-iY-gUH" firstAttribute="leading" secondItem="dGI-JT-aiB" secondAttribute="leading" constant="20" id="DsC-A3-KUf"/>
                             <constraint firstItem="dGI-JT-aiB" firstAttribute="trailing" secondItem="OFW-iY-gUH" secondAttribute="trailing" constant="20" id="MAe-NV-x8y"/>
                             <constraint firstItem="um3-nZ-Kq8" firstAttribute="centerX" secondItem="fzR-9a-66y" secondAttribute="centerX" id="f20-Sw-uE0"/>
-                            <constraint firstItem="OFW-iY-gUH" firstAttribute="top" secondItem="dGI-JT-aiB" secondAttribute="top" constant="50" id="zsH-ZF-0TM"/>
+                            <constraint firstItem="OFW-iY-gUH" firstAttribute="top" secondItem="dGI-JT-aiB" secondAttribute="top" constant="10" id="zsH-ZF-0TM"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="5YX-EP-bMX"/>
+                    <navigationItem key="navigationItem" largeTitleDisplayMode="never" id="5YX-EP-bMX"/>
                     <connections>
                         <outlet property="contentText" destination="F4l-IR-gS1" id="iPY-NW-nos"/>
                         <outlet property="imageView" destination="ofl-Jw-tc5" id="6Qy-x6-G0f"/>
@@ -177,17 +176,14 @@
         </scene>
     </scenes>
     <resources>
-        <namedColor name="AccentColor">
-            <color red="0.0" green="0.46000000000000002" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
-        <systemColor name="secondaryLabelColor">
-            <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGray6Color">
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
